--- a/site_ViveBio/src/views/products/productAll.ejs
+++ b/site_ViveBio/src/views/products/productAll.ejs
@@ -39,7 +39,6 @@
                                                             <%= toThousand(product.price) %>
                                                                 <% } %>
                                             </p>
-
                                         </div>
                                         <div class="card-c-iconos">
                                             <div class="iconos-white">
@@ -57,7 +56,6 @@
                                                                 <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                                                                 <a href="#"><i class="fa-solid fa-star"></i></a>
                                             </div>
-
                                         </div>
                                     </div>
                                 </div>
@@ -96,7 +94,6 @@
                                                             <%= toThousand(product.price) %>
                                                                 <% } %>
                                             </p>
-
                                         </div>
                                         <div class="card-c-iconos">
                                             <div class="iconos-white">
@@ -106,15 +103,11 @@
                                                                 class="fa-solid fa-pen"></i></a>
                                                         <% } %>
                                                             <% } %>
-                                                                <a href="/products/Card/<%= id %>"><i
-                                                                        class="fa-solid fa-eye"
-                                                                        title="Ver producto"></i></a>
-                                                                <a href="/productCarrito.html" class="add-cart">Quiero!
-                                                                    🛒</a>
+                                                                <a href="/products/Card/<%= id %>"><i class="fa-solid fa-eye" title="Ver producto"></i></a>
+                                                                <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
                                                                 <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                                                                 <a href="#"><i class="fa-solid fa-star"></i></a>
                                             </div>
-
                                         </div>
                                     </div>
                                 </div>
@@ -153,7 +146,6 @@
                                                             <%= toThousand(product.price) %>
                                                                 <% } %>
                                             </p>
-
                                         </div>
                                         <div class="card-c-iconos">
                                             <div class="iconos-white">
@@ -171,7 +163,6 @@
                                                                 <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                                                                 <a href="#"><i class="fa-solid fa-star"></i></a>
                                             </div>
-
                                         </div>
                                     </div>
                                 </div>
