--- a/site_ViveBio/src/views/error.ejs
+++ b/site_ViveBio/src/views/error.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+/* <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -39,13 +39,12 @@
         </section>
 
     </main>
-</body>
+</body> */
 
-<h4>
+<h1>
     <%= message %>
-</h4>
-<h5>
+</h1>
+<h2>
     <%= error.status %>
-</h5>
-<h6><%= error.stack %></h6>
-</html>
+</h2>
+<h3><%= error.stack %></h3>
