--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -85,10 +85,10 @@
                       </a>
                       <span>-<%= property %> -</span>
                       <p>$
-                        <% if (product.discount) { %>
-                          <%= toThousand(product.price - (product.price * product.discount / 100)) %>
+                        <% if (discount) { %>
+                          <%= toThousand(price - (price * discount / 100)) %>
                             <% }else{ %>
-                              <%= toThousand(product.price) %>
+                              <%= toThousand(price) %>
                                 <% } %>
                       </p>
                     </div>
@@ -96,11 +96,11 @@
                       <div class="iconos-white">
                         <% if (locals.userLogin) { %>
                           <% if (userLogin.category==="admin" ) { %>
-                            <a href="/products/Card/<%= id %> " title="Ver producto"><i class="fa-solid fa-eye"></i></a>
                             <a href="/products/Edit/<%= id %> " title="Editar producto"><i
                                 class="fa-solid fa-pen"></i></a>
                             <% } %>
                               <% } %>
+                              <a href="/products/Card/<%= id %> " title="Ver producto"><i class="fa-solid fa-eye"></i></a>
                                 <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
                                 <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                                 <a href="#"><i class="fa-solid fa-star"></i></a>
