--- a/site_ViveBio/src/views/products/productAll.ejs
+++ b/site_ViveBio/src/views/products/productAll.ejs
@@ -14,7 +14,7 @@
                                 <div class="card estilo-c">
                                     <div class="img-container">
                                         <a href="/products/Card/<%= id %>">
-                                            <img src="/images/<%= image %>" alt="producto">
+                                            <img src="/images/<%= image[0] %>" alt="producto">
                                         </a>
                                         <span class="promo">
                                             <%= discount %>% off
