--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -14,9 +14,10 @@
                     <a href="/users/login"><i class="fas fa-user-circle"></i>Login</a>
                 </div>
                 <% } else{ %>
-                    <h3>Hola <%= userLogin.user %>
-                    </h3>
-                    <a href="/users/logout">Logout</a>
+                    <div class="usuario_mobile-log">
+                        <img src="" alt="">
+                        <a href="/users/login"><i class="fas fa-user-circle"></i>Login</a>
+                    </div>
                     <% } %>
 
                         <ul class="menu">
