--- a/site_ViveBio/src/views/products/editProducts.ejs
+++ b/site_ViveBio/src/views/products/editProducts.ejs
@@ -40,7 +40,7 @@
                                     </div>
                                     <div class="add_form-box">
                                         <label for="image">Imagen</label>
-                                        <input class="add_input" type="file" id="image"  value="<%= product.image %> " name="image" accept="image/*" multiple>
+                                        <input class="add_input" type="file" id="image"  name="image" accept="image/*" multiple>
                                     </div>
                                 </div>
                                 <div>
