--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -24,14 +24,19 @@
                                 <%= userLogin.category %>
                             </span>
                         </a>
-                        <a href="/users/logout" style="margin-top: 5px;font-size:0.8rem;color:var(--verdeFuerte)" title="Salir">Logout</a>
+                        <a href="/users/logout" style="margin-top: 5px;font-size:0.8rem;color:var(--verdeFuerte)"
+                            title="Salir">Logout</a>
                     </div>
                     <% } %>
                         <ul class="menu">
                             <li><a href="/">Home</a></li>
-                            <li><a href="/products/all">Productos</a></li>
-                            <li><a href="">Quienes somos</a></li>
-                            <li><a href="">Contacto</a></li>
+                            <% if (locals.userLogin && userLogin.category=="admin" ) { %>
+                                <li><a href="/products/list/0">lista</a></li>
+                                <% }else{ %>
+                                    <li><a href="/products/all">Productos</a></li>
+                                    <% }%>
+                                        <li><a href="">Quienes somos</a></li>
+                                        <li><a href="">Contacto</a></li>
                         </ul>
         </div>
     </div>
