add slider responsive

--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -8,47 +8,14 @@
 
             <!-- Inicio de carrusel -->
             <div class="slider">
-                <div class="slides">
-                    <input type="radio" name="radio-btn" id="radio1">
-                    <input type="radio" name="radio-btn" id="radio2">
-                    <input type="radio" name="radio-btn" id="radio3">
-                    <input type="radio" name="radio-btn" id="radio4">
-                    <!-- imagenes de carrusel -->
-                    <div class="slide first">
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <div class="img_1"></div>
-                    </div>
-                    <div class="slide">
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <div class="img_2"></div>
-                    </div>
-                    <div class="slide">
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <div class="img_3"></div>
-                    </div>
-                    <div class="slide">
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <div class="img_4"></div>
-                    </div>
-                    <!-- fin de imagenes de carrusel -->
-                    <!-- botones manuales -->
-                    <div class="navigation-auto">
-                        <div class="auto-btn1"></div>
-                        <div class="auto-btn2"></div>
-                        <div class="auto-btn3"></div>
-                        <div class="auto-btn4"></div>
-                    </div>
-                    <!-- fin de botones manuales -->
-                </div>
-                <!-- botones para automatico -->
-                <div class="navigation-manual">
-                    <label for="radio1" class="manual-btn"></label>
-                    <label for="radio2" class="manual-btn"></label>
-                    <label for="radio3" class="manual-btn"></label>
-                    <label for="radio4" class="manual-btn"></label>
-                </div>
-                <!-- fin de botones automaticos -->
+                <ul>
+                    <li><img src="/images/carousel_img_1.webp" alt=""></li>
+                    <li><img src="/images/carousel_img_2.jpg" alt=""></li>
+                    <li><img src="/images/carousel_img_3.jpg" alt=""></li>
+                    <li><img src="/images/carousel_img_4.webp" alt=""></li>
+                </ul>
             </div>
+
             <!-- fin de carrusel -->
             <main>
                 <div class="subtitulo__home">
