--- a/site_ViveBio/public/css/home.css
+++ b/site_ViveBio/public/css/home.css
@@ -1,17 +1,58 @@
-.home .carrusel__home {
+/**********************************************
+Carrusel
+**********************************************/
+
+.home .slider{
     width: 100%;
-    height: 200px;
-    background-image: url(/images/banner.png);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
+    margin: auto;
+      margin-top: auto;
+    overflow: hidden;
+    height: 400px;
+    border-bottom: 1px solid aquamarine;
+    border-top: 1px solid aquamarine;
+    margin-top: 26px;
+    position: relative;
 }
 
-.no_scroll {
-    overflow: hidden;
+.home .slider ul {
+    display: flex;
+    padding: 0;
+    width: 400%;
+    height: 300px;
+    position: absolute;
+    height: 100%;
+
+    animation: change 20s infinite;
+    animation-direction: alternate;   /* Para que al llegar a la última imagen, retroceda, no vuelva a la primera */
+}
+
+.home .slider li {
+    width: 100%;
+    list-style: none;
+    position: relative;
+    height: auto;
+}
+
+.home .slider img {
+    width: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0px;
+    height: 100%;
+}
+
+@keyframes change {
+    0% {margin-left: 0;}
+    20% {margin-left: 0;}
+                               /* El tiempo entre bloque y bloque es el tiempo que durará la transición */
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+
+    50% {margin-left: -200%;}
+    70% { margin-left: -200%;}
+
+    75% { margin-left: -300%; }
+    100%  { margin-left: -300%; }
 }
 
 /************************************************
@@ -76,154 +117,6 @@ ANIMACIÓN DE INTRO
     transition: 0.5s;
 }
 
-
-
-/**********************************************
-Carrusel
-**********************************************/
-.slider {
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    padding: 0px;
-    position: relative;
-}
-
-.slides input {
-    display: none;
-}
-
-.slides {
-    width: 500%;
-    height: 100vh;
-    display: flex;
-}
-
-.slides p {
-    position: absolute;
-    top: 35%;
-    background-color: rgba(0, 0, 0, 0.25);
-    width: 100%;
-    text-align: center;
-    padding: 100px 0 100px;
-}
-
-
-.img_1 {
-    width: 100%;
-    height: 100%;
-    background-image: url(/images/carousel_img_1.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-.img_2 {
-    width: 100%;
-    height: 100%;
-    background-image: url(/images/carousel_img_2.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-.img_3 {
-    width: 100%;
-    height: 100%;
-    background-image: url(/images/carousel_img_3.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-.img_4 {
-    width: 100%;
-    height: 100%;
-    background-image: url(/images/carousel_img_4.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-
-
-.slide {
-    width: 20%;
-    transition: 2s;
-}
-
-.navigation-manual {
-    position: absolute;
-    width: 100%;
-    top: 95%;
-    display: flex;
-    justify-content: center;
-}
-
-.manual-btn {
-    border: 2px solid var(--verdeOscuro);
-    padding: 5px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 2s;
-}
-
-.manual-btn:not(:last-child) {
-    margin-right: 40px;
-}
-
-
-#radio1:checked~.first {
-    margin-left: 0;
-}
-
-#radio2:checked~.first {
-    margin-left: -20%;
-}
-
-#radio3:checked~.first {
-    margin-left: -40%;
-}
-
-#radio4:checked~.first {
-    margin-left: -60%;
-}
-
-
-.navigation-auto {
-    position: absolute;
-    display: flex;
-    width: 100%;
-    top: 95%;
-    justify-content: center;
-}
-
-.navigation-auto div {
-    border: 2px solid var(--verdeOscuro);
-    padding: 5px;
-    border-radius: 10px;
-    transition: 1s;
-}
-
-.navigation-auto div:not(:last-child) {
-    margin-right: 40px;
-}
-
-#radio1:checked~.navigation-auto .auto-btn1 {
-    background: var(--verdeOscuro);
-}
-
-#radio2:checked~.navigation-auto .auto-btn2 {
-    background: var(--verdeOscuro);
-}
-
-#radio3:checked~.navigation-auto .auto-btn3 {
-    background: var(--verdeOscuro);
-}
-
-#radio4:checked~.navigation-auto .auto-btn4 {
-    background: var(--verdeOscuro);
-}
 
 
 
