--- a/site_ViveBio/src/views/partials/head.ejs
+++ b/site_ViveBio/src/views/partials/head.ejs
@@ -5,4 +5,5 @@
     <script src="https://kit.fontawesome.com/c5fd8ed388.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css">
     <title><%= title %> </title>
+    <link rel="shortcut icon" href="/images/Logo.ico" type="image/x-icon">
 </head>
