--- a/site_ViveBio/public/css/styles.css
+++ b/site_ViveBio/public/css/styles.css
@@ -7,7 +7,7 @@
 @import './home.css';
 @import './login.css';
 @import './register.css';
-@import './carrito.css';
+@import './productCart.css';
 @import './productCard.css';
 @import './productAll.css';
 @import './addProducts.css';
