--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -93,7 +93,7 @@
                 <% } %>
                     <a href="#"><i class="fa-solid fa-gear" title="Configuración"></i></a>
                     <a href="#"><i class="fa-solid fa-bell" title="Notificaciones"></i></a>
-                    <a href="/carrito"><i class="fa-solid fa-cart-shopping" title="Carrito de compras"></i></a>
+                    <a href="/products/cart"><i class="fa-solid fa-cart-shopping" title="Carrito de compras"></i></a>
                     <a href="#"><i class="fa-regular fa-heart" title="Favoritos"></i></a>
         </div>
     </nav>
