--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -165,6 +165,7 @@
           </section>
       </main>
       <%- include('../partials/footer') %>
+      <script src="/javascript/menuMobile.js"></script>
   </body>
 
 </html>
