--- a/site_ViveBio/src/views/products/list.ejs
+++ b/site_ViveBio/src/views/products/list.ejs
@@ -11,7 +11,7 @@
                 <div class="list__top">
                     <div class="list__cates">
                         <div class="list__cates1">
-                            <a class="list__cate" href="/products/list/0">todos</a>
+                            <a class="list__cate" href="/products/list/0">TODOS</a>
                             <a class="list__cate" href="/products/list/1">BioCapilar</a>
                         </div>
                         <div class="list__cates2">
