--- a/site_ViveBio/public/css/productCart.css
+++ b/site_ViveBio/public/css/productCart.css
@@ -1,8 +1,7 @@
-
 .cart_container {
     width: 90%;
     padding: 20px;
-    margin: 100px auto;
+    margin: 70px auto;
     box-shadow: 5px 5px 10px rgb(161, 206, 152);
     border-radius: 5px;
     background-color: var(--verdeClaro-Opaco);
@@ -10,6 +9,33 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+}
+
+.cart_container input:hover,
+.cart_container input:focus,
+.cart_container select:focus,
+.cart_container select:hover {
+    box-shadow: 0 0 5px var(--verdeOscuro), 0 0 10px var(--verdeOscuro), 0 0 15px var(--verdeOscuro);
+    outline: none;
+}
+
+.cart_pasos {
+    width: 100%;
+    text-align: center;
+    font-size: 1rem;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.cart_paso {
+    padding: 10px;
+    border-radius: 5px;
+    background-color: var(--verdeOscuro);
+    color: white;
+    text-shadow: 2px 2px 4px black;
+    box-shadow: 2px 2px 6px black;
 }
 
 .cart_sect_img {
@@ -18,7 +44,6 @@
 
 .cart_sect_img img {
     width: 100%;
-    padding: 0.3rem;
     border-radius: 10px;
     border: 1px solid var(--verdeFuerte);
 }
@@ -92,8 +117,34 @@
 }
 
 .cart_sect_playment {
+    margin: 1rem 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+}
+
+.cart_select_payment {
+    border: 1px solid var(--verdeFuerte);
+    padding: 10px;
+    margin: 1rem 0;
+    font-size: .8rem;
+    transition: 0.5s;
+    border-radius: 5px;
+    width: 100%;
+    text-align: center;
+}
+
+.cart_buttons{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.cart_button{
+    padding: 10px;
+    border-radius: 5px;
+    background-color: var(--verdeOscuro);
+    color: white;
+    border: 1px solid var(--verdeFuerte);
 }
